--- a/TestWebApplication/Views/Account/Login.cshtml
+++ b/TestWebApplication/Views/Account/Login.cshtml
@@ -1,17 +1,18 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-@model Login
-<h2>Login</h2>
+@model LoginViewModel
+<h2>Авторизация</h2>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+        <form asp-controller="Account" asp-action="Login" method="post" class="form-horizontal" role="form">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Email" class="col-md-2 control-label"></label>
+                <label asp-for="Username" class="col-md-2 control-label"></label>
                 <div class="col-md-10">
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                    <input asp-for="Username" class="form-control" />
+                    <span asp-validation-for="Username" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group">
@@ -36,6 +37,7 @@
                 </div>
             </div>
         </form>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="ForgotPassword">Забыли пароль?</a>
     </div>
 </div>
 
