--- a/TestWebApplication/Views/Account/Register.cshtml
+++ b/TestWebApplication/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Reg" asp-action="Register" method="post" class="form-horizontal" role="form">
+        <form asp-controller="Account" asp-action="Register" method="post" class="form-horizontal" role="form">
             <div asp-validation-summary="All" class="text-danger"></div>
 
             <div class="form-group">
